# events-face

./: pyproject.toml
src/: urls.py
src/core/: asgi.py  settings.py  wsgi.py
src/events/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
src/events/migrations/: 0001_initial.py  0002_alter_venueevent_status.py
src/sync/: apps.py  models.py
src/sync/management/commands/: sync_events.py
src/sync/migrations/: 0001_initial.py
src/users/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
